z-index fix.

--- a/src/components/notifications/notifications.component.scss
+++ b/src/components/notifications/notifications.component.scss
@@ -3,7 +3,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 50;
+    z-index: 150;
     position: fixed;
     pointer-events: none;
 
